--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -5,5 +5,4 @@ ENV PATH="/root/.cargo/bin:${PATH}"
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get -y update && apt-get -y install curl build-essential libssl-dev pkg-config && \
-    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
-    cargo build --release
+    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
