--- a/code/Cargo.toml
+++ b/code/Cargo.toml
@@ -8,5 +8,11 @@ edition = "2021"
 [dependencies]
 futures-util = { version = "0.3", default-features = false, features = ["sink"] }
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1.11"
 warp = "0.3"
 pretty_env_logger = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+bincode = "1.3.3"
+rand = "0.8.5"
+uuid = { version = "1.3.0", features = ["v4"] }
