--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -7,4 +7,14 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get -y update && apt-get -y install curl build-essential libssl-dev pkg-config && \
     curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
-    cargo build --release
+    rustup target add x86_64-unknown-linux-musl && \
+    cargo build --release --target x86_64-unknown-linux-musl
+
+FROM alpine
+WORKDIR /server
+
+COPY --from=builder /build/target/x86_64-unknown-linux-musl/release/horta-backend /server/horta-backend
+
+ENV RUST_LOG=warp
+
+ENTRYPOINT [ "./horta-backend" ]
